/**
 * gRPC Client for DIM Orchestrator
 * 
 * For Phase 1, this is a placeholder that uses HTTP
 * In Phase 2, this will use actual gRPC
 */

import { JobSubmitRequest, JobStatusResponse, JobResultResponse } from '../types/index.js';
import { FastifyInstance } from 'fastify';

export class OrchestratorClient {
  private orchestratorUrl: string;
  private fastify: FastifyInstance;

  constructor(orchestratorUrl: string, fastify: FastifyInstance) {
    this.orchestratorUrl = orchestratorUrl;
    this.fastify = fastify;
  }

  /**
   * Submit job to orchestrator
   * 
   * For Phase 1, we'll use HTTP to communicate with orchestrator
   * In Phase 2, this will use gRPC
   */
  async submitJob(request: JobSubmitRequest, userId: string): Promise<string> {
    // For Phase 1, we'll call orchestrator's Python API directly
    // In Phase 2, use gRPC
    
    // Placeholder: return mock job ID
    // In production, make HTTP request to orchestrator or use gRPC
    const jobId = `job-${Date.now().toString(36)}`;
    
    this.fastify.log.info(`Job submitted: ${jobId}, pattern: ${request.pattern}`);
    
    return jobId;
  }

  async getJobStatus(jobId: string): Promise<JobStatusResponse> {
    // Placeholder: return mock status
    // In production, query orchestrator via gRPC
    return {
      jobId,
      status: 'pending',
      pattern: 'collaborative',
      progress: {
        completedSteps: 0,
        totalSteps: 1,
        percentComplete: 0
      }
    };
  }

  async getJobResult(jobId: string): Promise<JobResultResponse> {
    // Placeholder: return mock result
    // In production, get result from orchestrator via gRPC
    return {
      jobId,
      result: { mock: true },
      metadata: {
        nodesUsed: 1,
        totalExecutionTime: '5s',
        totalCost: 100
      }
    };
  }

  async cancelJob(jobId: string): Promise<boolean> {
    // Placeholder: return success
    // In production, cancel via orchestrator via gRPC
    this.fastify.log.info(`Job cancelled: ${jobId}`);
    return true;
  }
}

